--- a/css/styles-copia.css
+++ b/css/styles-copia.css
@@ -186,7 +186,7 @@ h5 {
 
 .portada {
     padding: 2rem 6.25rem 0;
-    min-height: 34.375rem;
+    height: 34.375rem;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
