--- a/scss/pages/_cotizador.scss
+++ b/scss/pages/_cotizador.scss
@@ -8,10 +8,11 @@
         padding: 1.25rem;
         transition: box-shadow 0.3s;
         cursor: pointer;
-        position: relative;
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        text-align: center;
 
         &:hover {
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -22,9 +23,14 @@
         display: grid;
         grid-template-columns: 2fr 1fr 1fr;
         gap: 1rem;
+
         .auto-span2 {
             grid-row: span 2;
         }
     }
 
+    img {
+        height: 5rem;
+
+    }
 }
