--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,75 +1,21 @@
 header {
     @include fondo-fixed;
-    display: flex;
-    justify-content: space-between;
-    height: 6rem;
-    padding: 1rem 2rem;
-    align-items: center;
+}
 
-    #logo {
-        width: 3rem;
-        height: 3rem;
-    }
-
-    .logo a {
+.logoyh1 {
+    a {
         width: 16rem;
+        height: 4rem;
         display: flex;
         justify-content: space-between;
-        align-items: flex-end;
+        align-items: center;
     }
 
-    a {
+    h1 {
+        margin: 0;
         color: $azul-oscuro;
-
-        &:hover {
-            color: $celeste;
-        }
     }
-
-    .menu-icon {
-        font-size: 1.5em;
-        cursor: pointer;
-        background-color: #186bd9;
-        color: #f2f2f2;
-        width: 2.1875rem;
-        height: 2.1875rem;
-        display: flex;
-        justify-content: center;
-    }
-
-    @media (max-width: 720px) {
-        nav ul {
-            display: none;
-        }
-    }
-
-    @media (min-width:720px) and (max-width: 1024px) {
-        nav ul {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: repeat(2, 50px);
-            justify-items: center;
-            align-items: center;
-            text-align: center;
-            list-style: none;
-        }
-
-        .menu-icon {
-            display: none;
-        }
-    }
-
-    @media (min-width: 1024px) {
-
-        .menu-icon {
-            display: none;
-        }
-
-        nav li {
-            display: inline-block;
-            padding: 1rem;
-        }
-
-
+    .logo {
+        width: 3rem;
     }
 }
