--- a/css/styles.css
+++ b/css/styles.css
@@ -104,13 +104,13 @@ h5 {
   background-color: #f2f2f2;
 }
 
-.grilla, .galeria {
+.grilla {
   position: relative;
 }
-.grilla div, .galeria div {
+.grilla div {
   position: relative;
 }
-.grilla h5, .galeria h5 {
+.grilla h5 {
   width: 100%;
   height: 100%;
   display: flex;
@@ -123,9 +123,9 @@ h5 {
   opacity: 0;
   transition: opacity 0.3s;
 }
-.grilla img, .galeria img {
+.grilla img {
   width: 90%;
-  height: 17rem;
+  height: 18rem;
   margin: 1rem;
   box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.2);
   object-fit: cover;
@@ -134,10 +134,10 @@ h5 {
   transition: opacity 0.3s, box-shadow 0.3s;
 }
 @media (min-width: 720px) {
-  .grilla, .galeria {
+  .grilla {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, 30%);
+    grid-template-rows: repeat(3, 32%);
   }
 }
 
@@ -147,15 +147,6 @@ h5 {
 }
 
 .grilla div:hover h5 {
-  opacity: 1;
-}
-
-.galeria img:hover {
-  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
-  opacity: 0.3;
-}
-
-.galeria img:hover {
   opacity: 1;
 }
 
@@ -186,11 +177,27 @@ h5 {
   }
 }
 
+@media (max-width: 1024px) {
+  .galeria {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    align-items: center;
+  }
+  .galeria img {
+    height: rem;
+    object-fit: cover;
+    box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.1);
+  }
+}
 @media (min-width: 1024px) {
   .galeria {
     display: flex;
     width: 600;
     height: 430px;
+  }
+  .galeria article {
+    display: none;
   }
   .galeria img {
     padding-top: 1rem;
@@ -206,6 +213,7 @@ h5 {
     filter: contrast(120%);
   }
 }
+
 .elementos-cotizables {
   margin-top: 2rem;
 }
@@ -237,6 +245,10 @@ h5 {
 }
 .elementos-cotizables img {
   height: 5rem;
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
