--- a/css/styles.css
+++ b/css/styles.css
@@ -180,21 +180,35 @@ h5 {
 @media (max-width: 1024px) {
   .galeria {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 1rem;
-    align-items: center;
   }
-  .galeria img {
-    height: 12rem;
-    object-fit: cover;
-    box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 0.5rem;
-  }
+}
+.galeria div {
+  position: relative;
+}
+.galeria div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+}
+.galeria div article {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 1rem;
 }
 @media (min-width: 1024px) {
   .galeria {
     display: flex;
-    width: 600;
+    width: 100%;
     height: 430px;
   }
   .galeria article {
@@ -202,16 +216,11 @@ h5 {
   }
   .galeria img {
     padding-top: 1rem;
-    width: 0px;
-    flex-grow: 1;
-    object-fit: cover;
-    opacity: 1;
-    transition: 0.5s ease;
   }
   .galeria img:hover {
     width: 300px;
     opacity: 0.3;
-    filter: contrast(120%);
+    filter: contrast(150%);
   }
 }
 
