--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -118,40 +118,51 @@
 .galeria {
     @media (max-width: 1024px) {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         gap: 1rem;
-        align-items: center;
+    }
+
+    div {
+        position: relative;
 
         img {
-            height: 12rem;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
-            box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.1);
-            border-radius: .5rem;
+            z-index: 1;
+        }
 
+        article {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
+            text-align: center;
+            width: 80%;
+            margin: 0 auto;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 1rem;
         }
     }
 
     @media (min-width: 1024px) {
-        display: flex;
-        width: 600;
-        height: 430px;
-
         article {
             display: none;
         }
 
-        img {
-            padding-top: 1rem;
-            width: 0px;
-            flex-grow: 1;
-            object-fit: cover;
-            opacity: 1;
-            transition: .5s ease;
+        display: flex;
+        width: 100%;
+        height: 430px;
 
+
+        img {
+            
+            padding-top: 1rem;
             &:hover {
                 width: 300px;
                 opacity: .3;
-                filter: contrast(120%);
+                filter: contrast(150%);
             }
         }
     }
