--- a/prueba.scss
+++ b/prueba.scss
@@ -1,3 +1,84 @@
+$semiblanco: #F2F2F2;
+$celeste: #63b0f2;
+$azul-claro: #389bf2;
+$azul-intermedio: #186db9;
+$azul-oscuro: #04588c;
+
+@mixin fondo-fixed {
+    background-image: url(../media/images/fondo.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
+}
+
+#logo {
+    width: 3rem;
+    height: 3rem;
+}
+
+h2,
+h3,
+h4,
+h5 {
+    padding: 1rem;
+}
+
+h2 {
+    color: $azul-oscuro;
+}
+
+h3 {
+    color: $azul-intermedio;
+}
+
+h4 {
+    color: $azul-claro;
+}
+
+h5 {
+    color: $celeste;
+}
+
+.enlace {
+    color: $azul-intermedio;
+
+    &:hover {
+        color: $azul-claro;
+    }
+}
+
+.portada {
+    @include fondo-fixed;
+}
+
+main {
+    @media (max-width: 720px) {
+        p {
+            text-align: justify;
+        }
+    }
+
+    @media (min-width: 1024px) {
+        text-align: start;
+    }
+
+    section {
+        @media (max-width: 1024px) {
+            padding: 2rem;
+        }
+
+        @media (min-width: 1024px) {
+            padding: 2rem 6.25rem;
+        }
+    }
+}
+
 #index {
     padding-bottom: 0rem;
 
@@ -154,11 +235,6 @@
 
         div {
             position: relative;
-            &:hover {
-                article {
-                    opacity: 1;
-                }
-            }
 
             img {
                 height: 100%;
@@ -183,13 +259,14 @@
                 z-index: 2;
                 text-align: center;
                 width: 80%;
-                margin: 0 auto;
                 background-color: rgba(255, 255, 255, 0.8);
                 padding: 1rem;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
             }
+
+            &:hover article {
+                opacity: 1;
+            }
+    
         }
     }
 }
