--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -150,46 +150,55 @@
 
     @media (min-width: 1024px) {
         display: flex;
-        height: 430px;
 
         div {
             position: relative;
+
+
             &:hover {
-                article {
-                    opacity: 1;
-                }
-            }
-
-            img {
-                height: 100%;
-                object-fit: cover;
-                padding-top: 1rem;
-
-                &:hover {
+                img {
                     width: 300px;
-                    opacity: 0.3;
+                    opacity: .3;
                     filter: contrast(150%);
 
+
+                }
+
+
+                article {
+                    opacity: 1;
+                    width: 250px;
+
+                    p {
+                        padding: 0rem 1.5rem;
+                    }
                 }
             }
+        }
+
+        img {
+            height: 100%;
+            object-fit: cover;
+            height: 430px;
 
             article {
                 opacity: 0;
-
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                z-index: 2;
-                text-align: center;
-                width: 80%;
-                margin: 0 auto;
-                background-color: rgba(255, 255, 255, 0.8);
-                padding: 1rem;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
             }
         }
+
+        article {
+            background-color: #f2f2f2;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            justify-content: center;
+            opacity: 0;
+
+        }
+
+
+
     }
 }
