--- a/css/styles.css
+++ b/css/styles.css
@@ -111,17 +111,18 @@ h5 {
   position: relative;
 }
 .grilla h5 {
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 4%;
   opacity: 0;
   transition: opacity 0.3s;
+  background-color: #f2f2f2;
 }
 .grilla img {
   width: 90%;
@@ -144,6 +145,7 @@ h5 {
 .grilla div:hover img {
   box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
   opacity: 0.3;
+  filter: contrast(150%);
 }
 
 .grilla div:hover h5 {
@@ -213,13 +215,16 @@ h5 {
     position: relative;
   }
   .galeria div:hover img {
-    width: 300px;
+    width: 19rem;
     opacity: 0.3;
     filter: contrast(150%);
   }
   .galeria div:hover article {
     opacity: 1;
-    width: 250px;
+    width: 15rem;
+    height: 20rem;
+    display: flex;
+    flex-direction: column;
   }
   .galeria div:hover article p {
     padding: 0rem 1.5rem;
