--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -46,17 +46,18 @@
     }
 
     h5 {
-        width: 100%;
-        height: 100%;
+        width: 70%;
+        height: 30%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         position: absolute;
-        top: 0;
-        left: 0;
+        top: 50%;
+        left: 4%;
         opacity: 0;
         transition: opacity 0.3s;
+        background-color: #f2f2f2;
     }
 
     img {
@@ -80,6 +81,7 @@
 .grilla div:hover img {
     box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
     opacity: .3;
+    filter: contrast(150%);
 }
 
 .grilla div:hover h5 {
@@ -157,7 +159,7 @@
 
             &:hover {
                 img {
-                    width: 300px;
+                    width: 19rem;
                     opacity: .3;
                     filter: contrast(150%);
 
@@ -167,7 +169,10 @@
 
                 article {
                     opacity: 1;
-                    width: 250px;
+                    width: 15rem;
+                    height: 20rem;
+                    display: flex;
+                    flex-direction: column;
 
                     p {
                         padding: 0rem 1.5rem;
