--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -46,6 +46,7 @@
     }
 
     h5 {
+        color: #04588c;
         width: 70%;
         height: 30%;
         display: flex;
@@ -54,10 +55,12 @@
         justify-content: center;
         position: absolute;
         top: 50%;
-        left: 4%;
+        left: 2%;
         opacity: 0;
         transition: opacity 0.3s;
         background-color: #f2f2f2;
+        border-top-right-radius: 4rem;
+        border-bottom-right-radius: 4rem;
     }
 
     img {
