--- a/css/styles.css
+++ b/css/styles.css
@@ -108,57 +108,6 @@ h5 {
   background-color: #f2f2f2;
 }
 
-.grilla {
-  position: relative;
-}
-.grilla div {
-  position: relative;
-}
-.grilla h5 {
-  color: #04588c;
-  width: 70%;
-  height: 30%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 50%;
-  left: 2%;
-  opacity: 0;
-  transition: opacity 0.3s;
-  background-color: #f2f2f2;
-  border-top-right-radius: 4rem;
-  border-bottom-right-radius: 4rem;
-}
-.grilla img {
-  width: 90%;
-  height: 18rem;
-  margin: 1rem;
-  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.2);
-  object-fit: cover;
-  border-radius: 1.25rem;
-  opacity: 1;
-  transition: opacity 0.3s, box-shadow 0.3s;
-}
-@media (min-width: 720px) {
-  .grilla {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, 32%);
-  }
-}
-
-.grilla div:hover img {
-  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
-  opacity: 0.3;
-  filter: contrast(150%);
-}
-
-.grilla div:hover h5 {
-  opacity: 1;
-}
-
 .botonesPortada {
   display: flex;
 }
@@ -226,6 +175,56 @@ h5 {
     justify-content: center;
     opacity: 0;
   }
+}
+
+.grilla {
+  position: relative;
+}
+.grilla div {
+  position: relative;
+}
+.grilla h5 {
+  color: #f2f2f2;
+  width: 70%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  opacity: 0;
+  transition: opacity 0.3s;
+  background-color: #186db9;
+  border-top-right-radius: 4rem;
+  border-bottom-right-radius: 4rem;
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
+}
+.grilla img {
+  width: 90%;
+  height: 18rem;
+  margin: 1rem;
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.2);
+  object-fit: cover;
+  border-radius: 1.25rem;
+  opacity: 1;
+  transition: opacity 0.3s, box-shadow 0.3s;
+}
+@media (min-width: 720px) {
+  .grilla {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, 32%);
+  }
+}
+
+.grilla div:hover img {
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
+}
+
+.grilla div:hover h5 {
+  opacity: 1;
 }
 
 .elementos-cotizables {
