--- a/scss/components/_boton.scss
+++ b/scss/components/_boton.scss
@@ -4,6 +4,7 @@
     border-radius: 0.2cm;
     display: inline-block;
     text-align: center;
+    transition: background-color 0.3s ease;
 }
 
 .botongral {
