--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ h5 {
 
 .enlace {
   color: #186db9;
+  transition: color 0.3s ease;
 }
 .enlace:hover {
   color: #389bf2;
@@ -121,6 +122,7 @@ h5 {
   border: #04588c 1px solid;
   color: #04588c;
   width: 7rem;
+  transition: border 0.3s;
 }
 .sabermas:hover {
   border: #63b0f2 1px solid;
@@ -328,6 +330,7 @@ header .logoyh1 .logo {
   position: fixed;
   right: 2rem;
   bottom: 1rem;
+  transition: bottom 0.3s ease;
 }
 .boton-wsp:hover {
   bottom: 1.25rem;
@@ -339,6 +342,7 @@ header .logoyh1 .logo {
   border-radius: 0.2cm;
   display: inline-block;
   text-align: center;
+  transition: background-color 0.3s ease;
 }
 
 .botongral {
