--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -21,7 +21,18 @@ $azul-oscuro: #04588c;
 #logo {
     width: 3rem;
     height: 3rem;
-    
+
+}
+
+h1 {
+    opacity: 0;
+    transform: translateX(-10px);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+h1.visible {
+    opacity: 1;
+    transform: translateX(0);
 }
 
 h2,
