--- a/css/styles.css
+++ b/css/styles.css
@@ -406,4 +406,10 @@ footer .copirig span {
   padding: 1rem;
 }
 
+.warnings {
+  margin: auto;
+  color: #04588c;
+  padding: 1rem 1rem;
+}
+
 /*# sourceMappingURL=styles.css.map */
