--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,4 +7,5 @@
 @import "./components/formularios";
 @import "./components/boton-wsp";
 @import "./components/boton";
-@import "./components/footer"
+@import "./components/footer";
+@import "./components/warnings";
